--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,10 +3,10 @@
 .button {
   height: 44px;
   padding: 12px 8px;
-  width: 420px;
+  width: 320px;
 
-  @media only screen and (max-width: 425px){
-    width: 320px
+  @media only screen and (min-width: 425px){
+    width: 420px;
   }
 }
 
