--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,8 +1,10 @@
 @import "@/_global.scss";
 
 .button {
+  box-sizing: border-box;
+  flex-shrink: 0;
   height: 44px;
-  padding: 12px 8px;
+  padding: 12px 14px;
   width: 320px;
 
   @media only screen and (min-width: 768px){
