--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,4 +1,4 @@
-@import '@/_global.scss';
+@import '@/styles/_global.scss';
 
 .stack {
   align-items: flex-end;
@@ -11,6 +11,11 @@
   @media only screen and (min-width: 768px) {
     width: 420px;
   }
+}
+
+.auxSearch {
+  flex: 1;
+  width: auto;
 }
 
 .input {
