--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -15,8 +15,18 @@
   }
 }
 
-.title {
-  font-size: 20px;
+.titleBlack {
+  font-size: 24px;
+  font-weight: 700;
+
+  @media only screen and (min-width: 768px) {
+    font-size: 32px;
+  } 
+}
+
+.titleBlue {
+  color: $primary-color;
+  font-size: 24px;
   font-weight: 700;
 
   @media only screen and (min-width: 768px) {
