--- a/src/components/SelectAutoComplete/SelectAutoComplete.module.scss
+++ b/src/components/SelectAutoComplete/SelectAutoComplete.module.scss
@@ -4,6 +4,11 @@
   border: none;
   border-color: $gray;
   height: 44px;
+  width: 320px;
+
+  @media only screen and (min-width: 1024px) {
+    width: 420px;
+  }
 }
 
 .auxSelect {
