--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,10 +5,16 @@
   flex-shrink: 0;
   height: 44px;
   padding: 12px 14px;
+  width: 320px;
+
+  @media only screen and (min-width: 1024px) {
+    width: 420px;
+  }
 }
 
 .auxButton {
-  width: min-content;
+  flex: 1;
+  width: auto;
 }
 
 .contained {
