--- a/src/components/TitleCard/TitleCard.module.scss
+++ b/src/components/TitleCard/TitleCard.module.scss
@@ -11,7 +11,6 @@
 
   @media only screen and (min-width: 768px) {
     padding: 24px;
-    width: auto;
   }
 }
 
@@ -19,9 +18,11 @@
   display: flex;
   flex-direction: column;
   padding: 24px;
+  width: 320px;
 
-  @media only screen and (min-width: 768px) {
-    width: 320px;
+  @media only screen and (min-width: 1024px) {
+    flex: 1;
+    width: auto;
   }
 }
 
@@ -46,7 +47,7 @@
   gap: 16px;
   padding: 8px 24px 24px 24px;
 
-  @media only screen and (min-width: 768px){
+  @media only screen and (min-width: 1024px){
     display: none;
   }
 }
