:sparkles: feat: add Footer component

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,11 +2,11 @@
 
 .footer {
   align-items: center;
-  box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.10);
   position: static;
   background-color: $white;
   height: 60px;
   justify-content: center;
+  margin-top: 16px;
   width: 100%;
 
   @media only screen and (min-width: 1024px) {
