:lipstick: style: fix padding in login page

--- a/src/styles/pages/login.module.scss
+++ b/src/styles/pages/login.module.scss
@@ -20,6 +20,7 @@
     box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.10);
     height: 70%;
     position: fixed;
+    padding: 32px;
     width: 60%;
   }
 }
