:sparkles: feat: create chosen candidate page

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -16,6 +16,11 @@
   max-width: min-content;
 }
 
+.secondaryButton {
+  background-color: $gray;
+  color: $black;
+}
+
 .contained {
   background-color: $primary-color;
   color: $white;
