:lipstick: style: fix components styles

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -13,11 +13,11 @@
 }
 
 .auxButton {
-  max-width: min-content;
+  width: 120px;
 }
 
 .secondaryButton {
-  background-color: $gray;
+  background-color: $light-gray;
   color: $black;
 }
 
