--- a/src/components/CandidatesCard/CandidatesCard.module.scss
+++ b/src/components/CandidatesCard/CandidatesCard.module.scss
@@ -64,10 +64,10 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  width: 100%;
   
   @media only screen and (min-width: 768px) {
     justify-content: center;
+    width: 110px;
   }
 }
 
@@ -80,7 +80,7 @@
     flex-direction: column;
     gap: 8px;
     justify-content: center;
-    width: 220px;
+    width: 180px;
   }
 }
 
@@ -92,6 +92,10 @@
     display: flex;
     justify-content: center;
   }
+}
+
+.buttonContainer {
+  display: flex;
 }
 
 .dividerContainer:last-child {
