--- a/src/components/CandidatesCard/CandidatesCard.module.scss
+++ b/src/components/CandidatesCard/CandidatesCard.module.scss
@@ -67,8 +67,11 @@
   
   @media only screen and (min-width: 768px) {
     justify-content: center;
-    width: 110px;
   }
+}
+
+.highlightContentWithButton {
+  width: 110px;
 }
 
 .skillsContent {
