:recycle: refator: removing unnecessary imports

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,5 @@
-$primary-color: #0AA0D9;
-$white: #FFFFFF;
+$primary-color: #0aa0d9;
+$white: #ffffff;
 $black: #000000;
 $gray: #747474;
-$light-gray: #D3D3D3;
+$light-gray: #d3d3d3;
